# craft-providers

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  HACKING.rst  Makefile  README.md  README.rst  SECURITY.md  cdsc  common.mk  craft-providers.kdev4  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: .copilot-collections.yaml  .jira_sync_config.yaml  CODEOWNERS  renovate.json5
.github/workflows/: automatic-doc-checks.yml  cla-check.yaml  copilot-collections-update.yaml  docs.yaml  main.yml  policy.yaml  qa.yaml  release-drafter.yml  release-publish.yaml  security-scan.yaml  tests-integration-lxd.yaml  tests-integration-multipass.yaml  tests-lint-unit.yaml  tests-weekly.yaml  tests.yaml  tics.yaml
.kdev4/: craft-providers.kdev4
craft_providers/: .provider.py.kate-swp  __init__.py  base.py  const.py  errors.py  executor.py  hookutil.py  image.py  instance_config.py  loopback_executor.py  pro.py  provider.py
craft_providers/actions/: __init__.py  craft_config.py  linux.py  snap_installer.py
craft_providers/bases/: __init__.py  _factory.py  almalinux.py  buildd.py  centos.py  checks.py  craft_config.py  errors.py  instance_config.py  ubuntu.py
craft_providers/data/: __init__.py  ubuntu.csv
craft_providers/host/: __init__.py  host_executor.py  host_provider.py
craft_providers/images/: __init__.py  buildd.py  errors.py
craft_providers/lxd/: __init__.py  config.py  errors.py  installer.py  launcher.py  lxc.py  lxd.py  lxd_installer.py  lxd_instance.py  lxd_instance_status.py  lxd_provider.py  lxd_vm_provider.py  project.py  remotes.py  yaml_loader.py
craft_providers/models/: __init__.py  snaps.py
craft_providers/multipass/: __init__.py  _launch.py  _ready.py  errors.py  installer.py  multipass.py  multipass_installer.py  multipass_instance.py  multipass_provider.py  windows.py
craft_providers/util/: __init__.py  env_cmd.py  os_release.py  path.py  retry.py  snap_cmd.py  sources.sh  temp_paths.py
docs/: .custom_wordlist.txt  .gitignore  .wordlist.txt  Makefile  changelog.rst  conf.py  custom_conf.py  executors.rst  explanations.rst  images.rst  index.rst  providers.rst  requirements.txt  spellingcheck.yaml  utils.rst
docs/.sphinx/: requirements.txt
docs/base/: .gitkeep
docs/explanation/: cryptography.rst  index.rst
docs/how-to/: index.rst
docs/how-to-guides/: index.rst  launch-instance.rst
docs/reference/: bases.rst  changelog.rst  index.rst
docs/tutorials/: index.rst
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_base.py  test_hookutil.py  test_pro.py  test_relaunch.py  test_version.py
tests/integration/actions/: test_snap_installer.py
tests/integration/lxd/: __init__.py  conftest.py  test_installer.py  test_launcher.py  test_lxc.py  test_lxd.py  test_lxd_instance.py  test_lxd_provider.py  test_lxd_prune.py  test_prune.py  test_remotes.py
tests/integration/multipass/: __init__.py  conftest.py  test_basic.py  test_installer.py  test_launch.py  test_multipass.py  test_multipass_installer.py  test_multipass_instance.py  test_multipass_provider.py  test_multipass_prune.py
tests/unit/: __init__.py  conftest.py  test_base.py  test_errors.py  test_executor.py  test_hookutil.py  test_pro.py  test_provider.py  test_todo.py  test_util.py
tests/unit/actions/: __init__.py  test_snap_installer.py
tests/unit/bases/: test_almalinux.py  test_base_name.py  test_buildd.py  test_centos_7.py  test_checks.py  test_craft_config.py  test_ensure_guest_compatible.py  test_errors.py  test_factory.py  test_get_base.py  test_instance_config.py  test_ubuntu_buildd.py
tests/unit/data/: ubuntu.csv
tests/unit/lxd/: test_config.py  test_errors.py  test_installer.py  test_launcher.py  test_lxc.py  test_lxd.py  test_lxd_instance.py  test_lxd_provider.py  test_project.py  test_remotes.py
tests/unit/lxd/sample_configs/basic/: config.yml
tests/unit/lxd/sample_configs/ratel/: config.yml
tests/unit/models/: __init__.py  test_snaps.py
tests/unit/multipass/: test_errors.py  test_installer.py  test_launch.py  test_multipass.py  test_multipass_instance.py  test_multipass_provider.py  test_ready.py
tests/unit/util/: test_env_cmd.py  test_os_release.py  test_retry.py  test_snap_cmd.py  test_temp_paths.py
tools/: ci-shell.sh  cla-check.py  freeze-requirements.sh
